# Assembler-SemiCompiler

./: .gitignore  CMakeLists.txt  LICENSE  MacroTest.as  MacroTest.asm  MacroTest.ob  MacroTestError.as  MacroTestError.asm  Makefile  README.md  Testps.asm  Testps.ob  assembler  error.as  error.asm
TestFiles/: MacroTest.ent  MacroTest.ext  Testps.ent  Testps.ext
include/: assembler.h  auxiliary.h  constants_tables.h  firstPass.h  first_pass.h  globals.h  hash_map.h  logger.h  memory_map.h  output.h  preprocess.h  secondPass.h  second_pass.h  status_codes.h  tables.h  utils.h  validators.h
src/: assembler.c  auxiliary_functions.c  firstPass.c  first_pass.c  hash_map.c  logger.c  memory_map.c  output.c  preprocess.c  secondPass.c  second_pass.c  status_codes.c  tables.c  utils.c  validators.c
